fixed gaps

--- a/styles/index.css
+++ b/styles/index.css
@@ -224,7 +224,7 @@ section.info {
 }
 .info h2 {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   color: #fff;
   text-align: left;
 }
@@ -240,12 +240,13 @@ section.info {
 .service-cards {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1.5rem;
+  gap: 1rem;
   margin: 1rem 0 3rem 0;
 }
 @media (min-width: 700px) {
   .service-cards {
     grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
   }
 }
 .service-card {
